<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    android:padding="16dp">

    <EditText
        android:id="@+id/name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/systolic_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:hint="Systolic Pressure"
        android:inputType="numberSigned"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/diastolic_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="141dp"
        android:ems="10"
        android:hint="Diastolic Pressure"
        android:inputType="numberSigned"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/heart_rate_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="196dp"
        android:ems="10"
        android:hint="Heart Rate"
        android:inputType="numberSigned"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/comments_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="246dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Comment"
        android:inputType="textMultiLine"
        android:singleLine="false" />
</RelativeLayout>